# MidAS-rs

./: Cargo.toml  MidSt.txt  README.md  index.css  index.html  issues.txt  x86_64_oxid.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
conf/: limine.cfg
runner/: cargo-run.sh
src/: allocator.rs  application.rs  asm.rs  cmd.rs  gdt.rs  interrupts.rs  kernel-preload.rs  kernel.rs  lib.rs  main.rs  memory.rs  os_info.rs  qemu.rs  random.rs  serial.rs  vga_buffer.rs  vga_driver.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/text/: mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
